# app_core

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Doxyfile  lcd_display.overlay  nrf5340dk_nrf5340_cpuapp.overlay  prj.conf
core/: MessageQueue.h  Semaphore.cpp  Thread.h
drivers/: ads1299.h
hci_rpmsg/: prj.conf
html/: _a_f_e_config_8h_source.html  _analog_front_end_wrapper_8h_source.html  _arm_matrix_wrapper_8h_source.html  _custom_front_end_wrapper_8h_source.html  _data_8h_source.html  _data_acquisition_thread_8h_source.html  _data_buffer_manager_8h_source.html  _events_8h_source.html  _h_i_d_thread_8h_source.html  _message_queue_8h_source.html  _semaphore_8h_source.html  _signal_processing_thread_8h_source.html  _state_machine_thread_8h_source.html  _t_i_bare_metal_wrapper_8h_source.html  _t_i_front_end_wrapper_8h_source.html  _thread_8h_source.html  _utils_8h_source.html  adc_8h_source.html  ads1299_8h_source.html  annotated.html  atomic__c_8h_source.html  autoconf_8h_source.html  auxdisplay_8h_source.html  bbram_8h_source.html  ble__handler_8h_source.html  cache_8h_source.html  can_8h_source.html  class_analog_front_end_wrapper-members.html  class_analog_front_end_wrapper.html  class_analog_front_end_wrapper__coll__graph.md5  class_analog_front_end_wrapper__inherit__graph.md5  class_arm_matrix_wrapper-members.html  class_arm_matrix_wrapper.html  class_arm_matrix_wrapper__coll__graph.md5  class_custom_front_end_wrapper-members.html  class_custom_front_end_wrapper.html  class_custom_front_end_wrapper__coll__graph.md5  class_data_acquisition_thread-members.html  class_data_acquisition_thread.html  class_data_acquisition_thread__coll__graph.md5  (+285 more)
inc/: AFEConfig.h  AnalogFrontEndWrapper.h  ArmMatrixWrapper.h  Data.h  DataAcquisitionThread.h  DataBufferManager.h  DummyFFTSignal.h  Events.h  HIDThread.h  SigProcThread.h  SignalProcessingThread.h  StateMachineThread.h  TIBareMetalWrapper.h  Utils.h  ble_handler.h  lcd_handler.h  led_handler.h  state_machine.h
lisa_test_project/: ArmMatrixWrapper.h  FFTsignal.h
src/: AFEConfig.h  AFESlaveThread.cpp  AFESlaveThread.h  AnalogFrontEndWrapper.h  ArmMatrixWrapper.h  Data.h  (+34 more)
(+28 files in other folders)
